third_party/move/move-compiler-v2/tests/checking/typing/nested_tuple_err.move
module 0xc0ffee::m {
    public fun test(): ((u64, u64), (u64, u64)) {
        ((1, 2), (3, 4))
    }
}
